--- a/testO/src/main/resources/application.properties
+++ b/testO/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.social.facebook.appId=298724237314855
-spring.social.facebook.appSecret=26a2cdde504e1d6f5c0d2f708bdf16b1
+spring.social.facebook.appId=
+spring.social.facebook.appSecret=
 
 # DataSource settings: 
 spring.datasource.url = jdbc:mysql://localhost:3306/db_autHF
