--- a/testO/src/main/resources/application.properties
+++ b/testO/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.driverClassName = com.mysql.jdbc.Driver
 # Specify the DBMS
 spring.jpa.database = MYSQL
 # Show or not log for each sql query
-spring.jpa.show-sql = true
+# spring.jpa.show-sql = true
 # Hibernate ddl auto (create, create-drop, update)
 spring.jpa.hibernate.ddl-auto = update
 # Naming strategy
